<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical">

	<TextView android:text="@string/from"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<AutoCompleteTextView android:id="@+id/text"
			android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"
			android:hint="@string/from"
			android:dropDownWidth="fill_parent"
    	    android:singleLine="true"
        	android:imeOptions="actionGo"/>
        <Button android:id="@+id/go" android:text="@string/go"
        	 android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	</LinearLayout>

	<Button android:id="@+id/from_my_location" android:text="@string/from_my_location"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<TextView android:text="@string/recent_locations"
	    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<ListView android:id="@+id/recent"
		android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
