<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent">
<!--	<TabWidget android:id="@android:id/tabs" android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->

	<TextView android:text="@string/from"
	          android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button   android:id="@+id/from"
	          android:layout_width="fill_parent" android:layout_height="wrap_content"/>

	<TextView android:text="@string/to"
	          android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button   android:id="@+id/to"
	          android:layout_width="fill_parent" android:layout_height="wrap_content"/>

	<TextView android:text="@string/when"
	          android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button   android:id="@+id/when"
	          android:layout_width="fill_parent" android:layout_height="wrap_content"/>

	<Button   android:id="@+id/search_route" android:text="@string/search"
	          android:layout_height="wrap_content" android:layout_width="fill_parent"/>

</LinearLayout>
